index.css
@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&display=swap");

body {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    background: radial-gradient(circle at bottom, #666, black);

    font-family: "Arvo", sans-serif;
    font-size: 14pt;

    color: black;
    text-align: left;
}

h1 {
    margin-top: 0;
    font-size: 46pt;
    font-weight: 700;

    color: white;
    text-shadow: 6px 6px black;
    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.4));
}

h2 {
    font-size: 32pt;
    font-weight: 700;

    color: #fff;
    text-shadow: 5px 5px black;
    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.4));
}

ul {
    /* Fixes bullets with float-left images for some reason. CSS moment */
    overflow: hidden;
    font-size: 20pt;
}

hr {
    margin-top: 0;
    opacity: 1;
    border-top: 2px solid;
}

#wheel {
    position: absolute;
    bottom: -345px;
    left: calc(50% - 270px);

    pointer-events: none;
}

#projector {
    position: absolute;
    top: 20px;
    left: 20px;
    width: calc(100% - 40px);
    height: calc(100% - 60px);
    border-radius: 20px;
    z-index: -10;
}

#vignette {
    position: absolute;
    top: 20px;
    left: 20px;
    width: calc(100% - 40px);
    height: calc(100% - 60px);
    box-shadow: 0 0 150px rgba(0, 0, 0, 0.5) inset;
    border-radius: 20px;
    pointer-events: none;
    z-index: -9;
}

#content-container {
    position: absolute;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    overflow: hidden;

    padding: 40px 40px 60px 40px;
}

#content-container > .container-fluid {
    position: absolute;
    width: 60%;
    left: 20%;
    max-height: calc(100% - 225px);
    overflow-y: auto;
    overflow-x: hidden;

    will-change: transform, opacity;
}
#content-container img {
    border-radius: 10px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}

.figure-caption {
    color: black;
    opacity: 0.6;
}

.white,
.white .figure-caption {
    color: white;
    /* text-shadow: 1px 1px 3px rgba(0, 0, 0, 1); */
}

.clear-end {
    clear: right;
}

.clear-start {
    clear: left;
}

.yt-video {
    aspect-ratio: 560 / 315;
    border-radius: 10px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}

/* content specific styles */
#content-0 {
    padding-top: 20vh;
    font-size: 18pt;
    overflow: visible !important;
    pointer-events: none;
}
#content-0 h1 {
    font-size: 46pt;
}
#content-0 img {
    position: absolute;
    width: 600px;
    left: calc(50% - 300px);
    top: 0;
    box-shadow: none;
    filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.2));
    z-index: -1;
}
#content-1 {
    padding-top: 10vh;
    font-size: 16pt;
}
#credits {
    font-size: 10pt;
    opacity: 0.6;
    margin-top: 5rem;
    text-align: right;
}

